--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^7.13.0",
-    "nodemon": "^2.0.6"
+    "mocha": "^8.2.1",
+    "nodemon": "^2.0.6",
+    "sinon": "^9.2.1",
+    "sinon-chai": "^3.5.0"
   }
 }
